# ystar-bridge-labs

./: .canonical_workspace_marker  .charter_baseline_hashes.json  .coverage  .czl_subgoals.json  .gitignore  .k9_subscriber_state.json  .mcp.json  .ystar_active_agent  .ystar_active_grant.json  .ystar_cieu.db-shm  .ystar_cieu_omission.db-shm  .ystar_cieu_omission.db-wal  .ystar_cieu_omission.db.pre_constitutional_repair  .ystar_coverage.json  .ystar_grant_audit.jsonl  .ystar_memory.db  .ystar_omission.db  .ystar_session.json  .ystar_warning_queue_archive.json  <sqlite3.Connection object at 0x10c1295d0>  AGENTS.md  BOARD_BRIEFING.md  BOARD_BRIEFING_20260404.md  BOARD_PENDING.md  CLAUDE.md  CZL.md  DAILY_SCHEDULE.md  DIRECTIVE_TRACKER.md  DISPATCH.md  HISTORY.md  INTERNAL_GOVERNANCE.md  OKR.md  OPERATIONS.md  README.md  SUBSYSTEM_INDEX.md  aiden_brain.db  omission  pyproject.toml  run_full_simulation.py  setup.py  (+10 more)
.claude/: settings.json  settings.local.json
agents/: CEO.md  CFO.md  CMO.md  CSO.md  CTO.md  Secretary.md
backups/: ygov_cieu_2026_03_30.db
benchmarks/: check_latency.py
claude-code-integration/: AGENTS.md  README.md
content/: article_pipeline.md  article_series_plan_v2.md  cmo_k9audit_content_ideas.md  github_discussion_draft.md  medium_case_study_format.md  offended_ai_s2_pilot_20260414.md  show_hn_ystar_defuse.md  video_registry.yml
data/: tech_radar_catalog.json
docs/: AMENDMENT_014_DELIVERY_REPORT.md  AMENDMENT_018_FULL_POSITIVE_CORPUS.md  ARCHITECTURE_ROLES.md  CHANGELOG.md  COMMUNICATION_ARCHITECTURE.md  FOUNDATION_API.md  HARD_CONSTRAINTS.md  JINJIN_INTEGRATION.md  PROVIDER_USAGE.md  aiden_intro.webm  amendment_021_wire_integrity_suite.md  arch17_behavioral_governance_spec.md  architecture_roadmap_2026-04-11.md  c5_working_memory_snapshot.md  ceo_heartbeat_integration.md  cieu_event_schema.md  cmo_blog_why_ai_auditor_shouldnt_be_ai.md  cmo_show_hn_ystar_defuse.md  cmo_ystar_defuse_README.md  cmo_ystar_defuse_demo_script_60s.md  cso_defuse_community_plan.md  cso_enterprise_phase1_update_0411.md  cto_exit_protocol_active_agent_self_heal.md  cto_handoff_amendment_021.md  ethan_intro.webm  goal_progress_dashboard.md  gov_mcp_setup.md  index.html  mac-cto-quick-reference.md  mac-cto-workstation-setup.md  marco_intro.webm  micro_chain_full_log.txt  orchestrator_architecture.md  session-lifecycle-cieu-events-and-deny-upgrade.md  sofia_intro.webm  (+2 more)
(+28383 files in other folders)
